--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="col-12 p-0 d-flex justify-content-center">
       <div class="recipe-card">
           <div class="img-container">
-            <img src="assets/images/image-omelette.jpeg" alt="Omelette">
+            <img src="assets/images/image-omelette.webp" alt="Omelette">
           </div>
           <div>
             <h1 class="recipe-heading mt-4 mb-4">Simple Omelette Recipe</h1>
